add transaccion a banco

--- a/app/views/banks/index.html.erb
+++ b/app/views/banks/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Banks#index</h1>
-<p>Find me in app/views/banks/index.html.erb</p>
+<%@banks.each do |bank|%>
+  <%= link_to bank_path(bank) do %>
+  <h3><%=bank.name%> - [<%= bank.account_number %>]</h3>
+  <% end %>
+<% end %>
