antes de migrar

--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Cargar movimiento", new_bank_transaction_path(@bank) %>
+<%= link_to "Cargar movimiento", new_extracto_transaction_path(@extracto) %>
 <div class="container">
   <table class="table">
     <thead>
