--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12">
-      <%= simple_form_for [@bank, @transaction] do |f| %>
+      <%= simple_form_for [@extracto, @transaction] do |f| %>
         <%= f.input :date %>
-        <%= f.input :comprobante, label: "Documento"%>
+        <%= f.input :comprobante, label: "Description", collection: ["Entre cuentas", "Sipap", "Pago de servicios", "Cobro de cuota", "Deposito en CHEQUE/EFECTIVO"]%>
         <%= f.input :importe_debito, label: "Debito"%>
         <%= f.input :importe_credito, label: "Credito"%>
         <div class="d-flex justify-content-center">
