--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -3,14 +3,17 @@
     <div class="col-12">
       <%= simple_form_for [@extracto, @transaction] do |f| %>
         <%= f.input :date %>
-        <%= f.input :comprobante, label: "Description", collection: ["Entre cuentas", "Sipap", "Pago de servicios", "Cobro de cuota", "Deposito en CHEQUE/EFECTIVO"]%>
+        <%= f.input :comprobante, label: "Description",
+         collection: ["Entre cuentas", "Sipap", "Pago de servicios", "Cobro de cuota", "Deposito en CHEQUE/EFECTIVO"],
+         prompt: "Seleccione una opcion",
+         required: true%>
         <%= f.input :importe_debito, label: "Debito"%>
         <%= f.input :importe_credito, label: "Credito"%>
         <div class="d-flex justify-content-center">
         <%= f.submit "Insertar Movimiento"%>
         </div>
       <% end %>
-      <%= link_to 'Back', root_path, class: "btn btn-outline-secondary" %>
+      <%= link_to 'Back', extracto_path(@extracto), class: "btn btn-outline-secondary" %>
     </div>
   </div>
 </div>
