--- a/app/assets/stylesheets/components/_status.scss
+++ b/app/assets/stylesheets/components/_status.scss
@@ -7,3 +7,13 @@
   color: white;
   background-color: red;
 }
+
+.status1 {
+  border: 1px solid red;
+  width: 60%;
+  padding: 0px;
+  margin: 5px;
+  border-radius: 7px;
+  color: green;
+  background-color: red;
+}
