--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -1,27 +1,97 @@
 <%= link_to "Cargar movimiento", new_extracto_transaction_path(@extracto) %>
 <div class="container">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Fecha</th>
-        <th scope="col">Descripcion</th>
-        <th scope="col">Debito</th>
-        <th scope="col">Credito</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Saldo</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @transactions.each do |trans| %>
-        <tr>
-          <th scope="row"><%=trans.date%></th>
-          <td><%=trans.comprobante %></td>
-          <td><%=trans.importe_debito%></td>
-          <td><%=trans.importe_credito%></td>
-          <td><h6 class="status text-center"><%=trans.status%></h6></td>
-          <td><%#=@bank.saldo_inicial%></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <div class="accordion" id="accordionExample">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+           NO-CONCILIADOS
+          </button>
+        </h2>
+      </div>
+      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+        <div class="card-body">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Fecha</th>
+                <th scope="col">Descripcion</th>
+                <th scope="col">Debito</th>
+                <th scope="col">Credito</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Saldo</th>
+                <th scope="col">Comentario</th>
+                <th scope="col">Accion</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @transactions.where(status: "no-conciliado").each do |trans| %>
+                <tr>
+                  <td><%=trans.date%></td>
+                  <td><%=trans.comprobante %></td>
+                  <td><%=trans.importe_debito%></td>
+                  <td><%=trans.importe_credito%></td>
+                  <td><h6 class="status text-center"><%=trans.status%></h6></td>
+                  <td><%#=@bank.saldo_inicial%></td>
+                  <td><%= link_to 'Agregar', edit_transaction_path(trans) %></td>
+                  <td><%= link_to 'Ver', transaction_path(trans) %></td>
+                </tr>
+                </div>
+
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion" id="accordionExample">
+    <div class="card">
+      <div class="card-header" id="headingTwo">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+            CONCILIADOS
+          </button>
+        </h2>
+      </div>
+
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+        <div class="card-body">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Fecha</th>
+                <th scope="col">Descripcion</th>
+                <th scope="col">Debito</th>
+                <th scope="col">Credito</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Saldo</th>
+                <th scope="col">Comentario</th>
+                <th scope="col">Accion</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @transactions.where(status: "conciliado").each do |trans| %>
+                <tr>
+                  <td><%=trans.date%></td>
+                  <td><%=trans.comprobante %></td>
+                  <td><%=trans.importe_debito%></td>
+                  <td><%=trans.importe_credito%></td>
+                  <td><h6 class="status1 text-center"><%=trans.status%></h6></td>
+                  <td><%#=@bank.saldo_inicial%></td>
+                  <td><%=trans.comment%></td>
+                  <td><%= link_to 'Edit', transaction_path(trans) %></td>
+                </tr>
+                </div>
+              <% end %>
+            </tbody>
+          </table>
+          </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+<!-- Modal -->
+
