--- a/app/assets/stylesheets/components/_status.scss
+++ b/app/assets/stylesheets/components/_status.scss
@@ -17,3 +17,14 @@
   color: green;
   background-color: red;
 }
+
+.status3 {
+  border: 1px solid red;
+  width: 80%;
+  height: 20px;
+  padding: 0px;
+  margin: 5px;
+  border-radius: 7px;
+  color: white;
+  background-color: red;
+}
