--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -9,7 +9,7 @@
           </button>
         </h2>
       </div>
-      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
         <div class="card-body">
           <table class="table table-striped table-hover">
             <thead>
