--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -4,6 +4,7 @@
       <%= simple_form_for(@transaction) do |f| %>
         <%= f.input :comment, label: "Comentario"%>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+        <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <div class="d-flex justify-content-center">
         <%= f.submit "Editar"%>
         </div>
