--- a/app/assets/stylesheets/components/_status.scss
+++ b/app/assets/stylesheets/components/_status.scss
@@ -14,8 +14,8 @@
   padding: 0px;
   margin: 5px;
   border-radius: 7px;
-  color: green;
-  background-color: red;
+  color: white;
+  background-color: green;
 }
 
 .status3 {
