--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -77,7 +77,7 @@
                   <td><%=trans.comprobante %></td>
                   <td><%=trans.importe_debito%></td>
                   <td><%=trans.importe_credito%></td>
-                  <td><h6 class="status1 text-center"><%=trans.status%></h6></td>
+                  <td><h6 class="btn btn-success text-center"><%=trans.status%></h6></td>
                   <td><%#=@bank.saldo_inicial%></td>
                   <td><%=trans.comment%></td>
                   <td><%= link_to 'Edit', transaction_path(trans) %></td>
