--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -1,62 +1,51 @@
 <%= link_to "Cargar movimiento", new_extracto_transaction_path(@extracto) %>
 <div class="container">
-  <div class="accordion" id="accordionExample">
-    <div class="card">
-      <div class="card-header" id="headingOne">
-        <h2 class="mb-0">
-          <button class="btn btn-link btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-           NO-CONCILIADOS
-          </button>
-        </h2>
-      </div>
-      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-        <div class="card-body">
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">NO-Conciliado</a>
+      <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Conciliado</a>
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <div style="overflow-x:auto;">
           <table class="table table-striped table-hover">
-            <thead>
+          <thead>
+            <tr>
+              <th scope="col">Fecha</th>
+              <th scope="col">Descripcion</th>
+              <th scope="col">Debito</th>
+              <th scope="col">Credito</th>
+              <th scope="col">Estado</th>
+              <th scope="col">Saldo</th>
+              <th scope="col">Comentario</th>
+              <th scope="col">Accion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @transactions.where(status: "no-conciliado").each do |trans| %>
               <tr>
-                <th scope="col">Fecha</th>
-                <th scope="col">Descripcion</th>
-                <th scope="col">Debito</th>
-                <th scope="col">Credito</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Saldo</th>
-                <th scope="col">Comentario</th>
-                <th scope="col">Accion</th>
+                <td><%=trans.date%></td>
+                <td><%=trans.comprobante %></td>
+                <td><%=trans.importe_debito%></td>
+                <td><%=trans.importe_credito%></td>
+                <td><h6 class="status text-center"><%=trans.status%></h6></td>
+                <td><%#=@bank.saldo_inicial%></td>
+                <td><%= link_to 'Agregar', edit_transaction_path(trans) %></td>
+                <td><%= link_to 'Ver', transaction_path(trans) %></td>
               </tr>
-            </thead>
-            <tbody>
-              <% @transactions.where(status: "no-conciliado").each do |trans| %>
-                <tr>
-                  <td><%=trans.date%></td>
-                  <td><%=trans.comprobante %></td>
-                  <td><%=trans.importe_debito%></td>
-                  <td><%=trans.importe_credito%></td>
-                  <td><h6 class="status text-center"><%=trans.status%></h6></td>
-                  <td><%#=@bank.saldo_inicial%></td>
-                  <td><%= link_to 'Agregar', edit_transaction_path(trans) %></td>
-                  <td><%= link_to 'Ver', transaction_path(trans) %></td>
-                </tr>
-                </div>
+              </div>
 
-              <% end %>
-            </tbody>
+            <% end %>
+          </tbody>
           </table>
         </div>
       </div>
     </div>
-  </div>
-  <div class="accordion" id="accordionExample">
-    <div class="card">
-      <div class="card-header" id="headingTwo">
-        <h2 class="mb-0">
-          <button class="btn btn-link btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-            CONCILIADOS
-          </button>
-        </h2>
-      </div>
-
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-        <div class="card-body">
+    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <div style="overflow-x:auto;">
           <table class="table table-striped table-hover">
             <thead>
               <tr>
@@ -86,7 +75,7 @@
               <% end %>
             </tbody>
           </table>
-          </div>
+        </div>
       </div>
     </div>
   </div>
