--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -1,13 +1,22 @@
-<%= link_to "Cargar movimiento", new_extracto_transaction_path(@extracto) %>
 <div class="container">
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">NO-Conciliado</a>
-      <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Conciliado</a>
+      <a class="nav-item nav-link active" id="nav-add-tab" data-toggle="tab" href="#nav-add" role="tab" aria-controls="nav-add" aria-selected="false">Agregar</a>
+      <a class="nav-item nav-link" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">NO-Conciliado</a>
+      <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Consiliado</a>
     </div>
   </nav>
   <div class="tab-content" id="nav-tabContent">
-    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+    <div class="tab-pane fade show active" id="nav-add" role="tabpanel" aria-labelledby="nav-add-tab">
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <div style="overflow-x:auto;">
+          <div class="text-center m-5">
+            <%= link_to "Cargar movimiento", new_extracto_transaction_path(@extracto), class: "btn btn-success text-center"%>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tab-pane fade show" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
       <div class="col-xs-12 col-sm-12 col-md-12">
         <div style="overflow-x:auto;">
           <table class="table table-striped table-hover">
@@ -30,7 +39,7 @@
                 <td><%=trans.comprobante %></td>
                 <td><%=trans.importe_debito%></td>
                 <td><%=trans.importe_credito%></td>
-                <td><h6 class="status text-center"><%=trans.status%></h6></td>
+                <td><h6 class="btn btn-danger text-center"><%=trans.status%></h6></td>
                 <td><%#=@bank.saldo_inicial%></td>
                 <td><%= link_to 'Agregar', edit_transaction_path(trans) %></td>
                 <td><%= link_to 'Ver', transaction_path(trans) %></td>
@@ -78,6 +87,7 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
 
