--- a/app/views/transactions/_index.html.erb
+++ b/app/views/transactions/_index.html.erb
@@ -5,6 +5,9 @@
       <a class="nav-item nav-link" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">NO-Conciliado</a>
       <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Consiliado</a>
     </div>
+<ul class="list-group">
+  <li class="list-group-item">Cantidad de movimientos cargados: <%= @transactions.count %></li>
+</ul>
   </nav>
   <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-add" role="tabpanel" aria-labelledby="nav-add-tab">
@@ -87,6 +90,7 @@
         </div>
       </div>
     </div>
+
 
   </div>
 </div>
