--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -2,11 +2,12 @@
   <div class="row justify-content-center">
     <div class="col-12">
       <%= simple_form_for(@transaction) do |f| %>
+        <%= f.input :date %>
         <%= f.input :comment, label: "Comentario"%>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <div class="d-flex justify-content-center">
-        <%= f.submit "Editar"%>
+        <%= f.submit "Guardar cambios"%>
         </div>
       <% end %>
       <%= link_to 'Back', :back, class: "btn btn-outline-secondary" %>
