--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -37,7 +37,9 @@
       <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
     <% end %>
   <% end %>
+<h2 class="btn btn-success"><%= link_to 'Editar', edit_transaction_path(@transaction)%></h2>
 <h2 class="btn btn-success"><%= link_to "Conciliar", conciliado_path(@transaction)%></h2>
+<h2 class="btn btn-success"><%= link_to "Atras", :back %></h2>
 </div>
 <div class="accordion" id="accordionExample">
     <div class="card">
