--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <%= link_to banks_path do %>
 <h1>Bancos</h1>
 <% end %>
+
+<%= link_to compros_path do %>
+<h1>Comprobantes de depositos</h1>
+<% end %>
