--- a/app/views/compros/index.html.erb
+++ b/app/views/compros/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="tab-pane fade show" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-      <div class="col-xs-12 col-sm-12 col-md-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg">
         <div style="overflow-x:auto;">
           <table class="table table-striped table-hover">
           <thead>
@@ -17,7 +17,7 @@
               <th scope="col">Comprobante</th>
               <th scope="col">Status</th>
               <th scope="col">Creado por</th>
-              <th scope="col">Consiliado por</th>
+              <th scope="col">Conciliado por</th>
               <th scope="col">Cargado en el sys por</th>
             </tr>
           </thead>
@@ -42,9 +42,18 @@
                 <% else %>
                   <td><h6 class="btn btn-success text-center"><%=compro.status%></h6></td>
                 <% end %>
-                <td>Creado por..</td>
-                <td>Creado por..</td>
-                <td>Creado por..</td>
+                <td><%= compro.creado_por%></td>
+                <td><%= compro.conciliado_por%></td>
+                <% if compro.cargado_por.nil? %>
+                  <td>
+                    <%= link_to cargado_por_path(compro), data: {confirm: "Deseas confirmar esta operacion??"} do  %>
+                    <h6 class="btn btn-danger text-center">Cargar</h6>
+                    <% end %>
+                  </td>
+                <% else %>
+                  <td><%= compro.cargado_por%></td>
+                <% end %>
+
               </tr>
               </div>
 
