--- a/app/views/compros/index.html.erb
+++ b/app/views/compros/index.html.erb
@@ -1,3 +1,9 @@
+<form action="/compros" class="form-inline d-flex justify-content-center md-form form-sm mt-15 m-3 rounded-pill">
+  <input class="form-control form-control-sm ml-3 w-75" type="text" name="query" placeholder="Search"
+    aria-label="Search">
+  <button class="btn" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+</form>
+
 <div class="col-xs-12 col-sm-12 col-md-12">
   <div style="overflow-x:auto;">
     <div class="text-center">
@@ -24,7 +30,11 @@
           <tbody>
             <% @compros.each do |compro| %>
               <tr>
-                <td><%= compro.nro %></td>
+                <% if compro.nro.nil? %>
+                  <td><%= link_to "Agregar", edit_compro_path(compro)%></td>
+                <% else %>
+                  <td><%= compro.nro %></td>
+                <% end %>
                 <td><%=compro.name%></td>
                 <td><%=compro.comment %></td>
                 <td><%=compro.monto %></td>
@@ -42,8 +52,8 @@
                 <% else %>
                   <td><h6 class="btn btn-success text-center"><%=compro.status%></h6></td>
                 <% end %>
-                <td><%= compro.creado_por%></td>
-                <td><%= compro.conciliado_por%></td>
+                <td><%=compro.creado_por%></td>
+                <td><%=compro.conciliado_por%></td>
                 <% if compro.cargado_por.nil? %>
                   <td>
                     <%= link_to cargado_por_path(compro), data: {confirm: "Deseas confirmar esta operacion??"} do  %>
