--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -5,7 +5,7 @@
         <%= f.input :date %>
         <%= f.input :importe_debito, label: "Debito"%>
         <%= f.input :importe_credito, label: "Credito"%>
-        <%= f.input :comment, label: "Comentario"%>
+        <%= f.input :comprobante, label: "Comentario"%>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <div class="d-flex justify-content-center">
