--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,7 @@
 <%= link_to compros_path do %>
 <h1>Comprobantes de depositos</h1>
 <% end %>
+
+<%= link_to compros_path do %>
+<h1>Cheques</h1>
+<% end %>
