--- a/app/views/hojas/_index.html.erb
+++ b/app/views/hojas/_index.html.erb
@@ -6,7 +6,7 @@
       <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">APROBADO</a>
     </div>
 <ul class="list-group">
-  <li class="list-group-item">Cantidad de movimientos cargados: <%#= @transactions.count %></li>
+  <li class="list-group-item"> Cantidad de hojas disponibles: <%=@hojas.where(aprobado: "no").count %></li>
 </ul>
   </nav>
   <div class="tab-content" id="nav-tabContent">
