--- a/app/views/hojas/_index.html.erb
+++ b/app/views/hojas/_index.html.erb
@@ -83,7 +83,7 @@
                           <h6 class="btn btn-danger text-center">No-Cargado</h6>
                         <% end %>
                         <% else %>
-                          <h6 class="btn btn-success text-center">@hoja.compensado_por</h6>
+                          <h6><%=hoja.compensado_por%></h6>
                       <% end %>
                   </td>
                 </tr>
