--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,7 @@
 <%= link_to compros_path do %>
 <h1>Cheques</h1>
 <% end %>
+
+<%= link_to habitacions_path do %>
+<h1>Lista de habitaciones</h1>
+<% end %>
