--- a/app/views/habitacions/index.html.erb
+++ b/app/views/habitacions/index.html.erb
@@ -1,3 +1,6 @@
+<%= link_to new_habitacion_path do%>
+  <h6 class="btn btn-success text-center">Crear Habitacion</h6>
+<% end %>
 
 <ul>
   <%@habitaciones.each do |habitacion|%>
