--- a/app/views/habitacions/show.html.erb
+++ b/app/views/habitacions/show.html.erb
@@ -6,6 +6,7 @@
     <tr>
       <th>Item</th>
       <th>Status</th>
+      <th>Modificado por</th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +20,10 @@
                 <h6 class="btn btn-danger text-center"><%=@habitacion.bolsas%></h6>
               <% end %>
           <% end %>
+        </td>
+        <td>
+          <h5 id="teste">Ruben <%=@habitacion.updated_at.localtime%></h5>
+          <h5 id="teste_1">ruben</h5>
         </td>
     </tr>
     <tr>
