--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,3 +22,7 @@
 <%= link_to habitacions_path do %>
 <h1>Check List de habitaciones</h1>
 <% end %>
+
+<%= link_to retiros_path do %>
+<h1>Retiros de Caja</h1>
+<% end %>
