--- a/app/views/hojas/new.html.erb
+++ b/app/views/hojas/new.html.erb
@@ -7,7 +7,7 @@
         <%= f.input :monto, label: "Monto"%>
         <%= f.input :fecha_pago, label: "Fecha de pago"%>
         <div class="d-flex justify-content-center">
-        <%= f.submit "Crear Extracto"%>
+        <%= f.submit "Usar Hoja"%>
         </div>
       <% end %>
       <%= link_to 'Back', root_path, class: "btn btn-outline-secondary" %>
